#   PROCESS THAT IS TIME SENSITIVE, UNMONITORED, OR
#   PERSISTENCE CRITICAL. DO NOT USE THIS SOFTWARE WITHOUT
#   ANOTHER METHOD iOR RUNNING THE PROCESS YOU WISH TO
#   AUTOMATE WITH Net::FullAuto. DO NOT USE IN/FOR A PROCESS
#   WHERE FAILURE OF "ANY KIND" IS UNACCEPTABLE.
#
################################################################


2011-08-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9960 released.

        * Added more code for managing FullAuto user files.


2011-08-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9959 released.

        * More changes to Makefile.PL - changed perms to
          setuid.

        * Added more code for managing FullAuto user files.


2011-08-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9958 released.

        * More changes to Makefile.PL for Win XP.


2011-08-09  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9957 released.

        * Modified functionality to choose default modules.


2011-08-07  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9956 released.

        * More changes to Makefile.PL.

        * Added &persist_get() and &persist_put().


2011-08-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9955 released.

        * More changes to Makefile.PL to correct
          small regex issue for Win XP.


2011-08-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9954 released.

        * More changes to Makefile.PL to correct
          issues.


2011-08-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9953 released.

        * More changes to Makefile.PL to correct
          editor choice sed syntax.


2011-08-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9952 released.

        * More changes to Makefile.PL to correct
          editor choice.

