@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 af91f047ca3bbffefe1ad256174ffd4f04c83428 ChangeLog
+SHA1 f04fd80b7e5f5c166510654dc5542ee09cb4ae1e ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 2c47234815d7762d27b0de69a1610dcf811aa740 MANIFEST
-SHA1 0d95e66f9eaf5013682fb4e48fae1474be6d08c9 META.yml
-SHA1 256135d42b8363b2f059f8aea315baad2fb45dd1 Makefile.PL
+SHA1 d6d32667e02d02fba8ee317d65b0b1f31fe79723 META.yml
+SHA1 93dbbcc5609b31167e258640750fbe52fda22ac1 Makefile.PL
 SHA1 ffcc80b5c5cbb52f2c2234e9d66f9f32d63f9be7 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 31a954fc45c651d869abaf2f52ecead8f898648f bin/fullauto.pl
@@ -35,23 +35,23 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 6d7968f150d13794bf32f44323ef859891107da4 lib/Net/FullAuto.pm
+SHA1 900a72f85296de48cd65d858c779e6de10bd7323 lib/Net/FullAuto.pm
 SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
 SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
 SHA1 3dba6317f994a5d42a6f45f959a7829aba92e242 lib/Net/FullAuto/Distro/fa_code.pm
-SHA1 8d7e0fe455e956102d0d0da7ec51aa0103de0550 lib/Net/FullAuto/Distro/fa_code_demo.pm
+SHA1 12fda058bb33ae2775dbf577a1cdbbc235d99092 lib/Net/FullAuto/Distro/fa_code_demo.pm
 SHA1 47c63ee0e8b830c36f6041bd3c2115e588b78c47 lib/Net/FullAuto/Distro/fa_conf.pm
 SHA1 2f5889b356d25c1f95b56a84ef9c63a6626282e9 lib/Net/FullAuto/Distro/fa_host.pm
 SHA1 4cffe8447a92a1248708fe86d06ac60b9db30478 lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 f5e618dff484911180f567c9e3335acc23065ac1 lib/Net/FullAuto/Distro/fa_menu.pm
-SHA1 bc2de233a6cffb34bc72356e99605ce9bfc02a25 lib/Net/FullAuto/Distro/fa_menu_demo.pm
+SHA1 41e64e354de4bf932f2e221ca7949c582e9e042e lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 94a30c761a3edc9db6e3fcb99c4604092b17db59 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk5LJokACgkQdsVAdUjO9ImZ+QCgoYKlpoknQ984mLCBb+/xTjiE
-OZkAn3C9liJ1tSvgqTaCBJDrLUajUr9c
-=kW32
+iEYEARECAAYFAk5N0+4ACgkQdsVAdUjO9InByQCeJEWQGeip8wSBpIYJJ7HA5YtE
+MM8An1vOJ0ts80Lid83U8u4ySsZYvcAZ
+=CeZg
 -----END PGP SIGNATURE-----
