@@ -54,7 +54,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.9960';
+our $VERSION='0.9961';
 
 
 use 5.005;
